--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@prisma/adapter-neon": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@qdrant/js-client-rest": "^1.16.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
