--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-resizable-panels": "^3.0.6",
     "svix": "^1.82.0",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
